--- a/elim/src/main/resources/application.properties
+++ b/elim/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/elim?serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+#show sql on the console
+spring.jpa.show-sql=true
