--- a/elim/src/main/resources/application.properties
+++ b/elim/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=elim
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/elim?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/elim?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
