--- a/elim/pom.xml
+++ b/elim/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.22</version>
         </dependency>
+       <!-- to implements WebMvcConfigurer-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
