--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
-    "deploy": "quasar build && push-dir --dir=dist/spa --remote=gh-pages --branch=master"
+    "deploy": "quasar build && push-dir --dir=dist/spa --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
