--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,7 +4,12 @@
     "baseUrl": "."
   },
   "paths": {
-    "@/*": ["src/*"]
+    "src/*": ["src/*"],
+    "components/*": ["src/components/*"],
+    "layouts/*": ["src/layouts/*"],
+    "pages/*": ["src/pages/*"],
+    "assets/*": ["src/assets/*"],
+    "boot/*": ["src/boot/*"]
   },
   "exclude": [
     "./dist",
