--- a/elim/pom.xml
+++ b/elim/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>spring-webmvc</artifactId>
             <version>6.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
