--- a/elim/pom.xml
+++ b/elim/pom.xml
@@ -52,6 +52,14 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
+        <!-- dao use sort  -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
