--- a/elim/pom.xml
+++ b/elim/pom.xml
@@ -64,10 +64,29 @@
             <version>3.2.3</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.jxls</groupId>-->
+<!--            <artifactId>jxls-poi</artifactId>-->
+<!--            <version>2.14.0</version>-->
+<!--        </dependency>-->
+
+        <!-- JXLS 核心 -->
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <!-- 基於poi實現 -->
         <dependency>
             <groupId>org.jxls</groupId>
             <artifactId>jxls-poi</artifactId>
-            <version>2.14.0</version>
+            <version>1.2.0</version>
+        </dependency>
+        <!-- 讀取Excle -->
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls-reader</artifactId>
+            <version>2.0.5</version>
         </dependency>
     </dependencies>
 
